--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>HOLA MUNDO</h1>
+    <h2>Hola mundo de nuevo</h2>
+    <h3>Esto es una prueba en la rama MASTER</h3>
     
 </body>
 </html>
