Probando el git diff

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>HOLA MUNDO</h1>
     <h2>Hola mundo de</h2>
+    <h2>Hola amigos</h2>
     <h3>Esto es una prueba en la rama MASTER</h3>
     
 </body>
