--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>HOLA MUNDO</h1>
-    <h2>Hola mundo de</h2>
-    <h2>Hola amigos</h2>
-    <h3>Agregando otro H3</h3>
-    <h3>Esto es una prueba en la rama MASTER</h3>
+    <h1>Github master</h1>
+    <h2>FrondEnd</h2>
+    <h2>BackEnd</h2>
+    <h3>Full Stack</h3>
     
 </body>
 </html>
