Agregando H3 al final

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h2>FrondEnd</h2>
     <h2>BackEnd</h2>
     <h3>Full Stack</h3>
+    <h3>Development of software</h3>
     
 </body>
 </html>
